--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="./recipes/beef-stew.html">Beef Stew Recipe</a></li>
-        <li><a href="./recipes//fried-chicken.html">Fried Chicken Recipe</a></li>
         <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="./recipes/fried-chicken.html">Fried Chicken</a></li>
     </ul>
     
     
