Fixed the error that caused fried chicken webpage not to work

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fried Chicken/title>
+    <title>Fried Chicken Recipe</title>
 </head>
 <body>
-    <img src="/recipe-images/fried-chicken.jpeg" alt="Fried Chicken Image" width="300" height="400">
+    <img src="recipe-images/fried-chicken.jpeg" alt="Fried Chicken Image" width="300" height="400">
 
     <h1>Fried Chicken</h1>
     <p>
@@ -36,7 +36,5 @@
         <li>Fry chicken in batches, avoiding overcrowding, until golden brown and cooked through (internal temperature should reach 165°F or 74°C), about 12-15 minutes per batch.</li>
         <li>Drain on paper towels and let rest before serving.</li>
     </ol>
-    
-
 </body>
 </html>
