Images ae now displayed onto the website

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -6,8 +6,7 @@
     <title>Fried Chicken Recipe</title>
 </head>
 <body>
-    <img src="recipe-images/fried-chicken.jpeg" alt="Fried Chicken Image" width="300" height="400">
-
+    <img src="../recipe-images/fried-chicken.jpeg" alt="Fried Chicken Image" width="300" height="400">
     <h1>Fried Chicken</h1>
     <p>
         Crispy on the outside and juicy on the inside, fried chicken is a beloved classic. Chicken pieces are marinated in buttermilk for tenderness, then coated in a seasoned flour mixture before being deep-fried to golden perfection. It's a flavorful and satisfying dish enjoyed by many.
