--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     <title>Lasagna Recipe</title>
 </head>
 <body>
-    <img src="/recipe-images/lasagna.jpeg" alt="Lasagna Image" width="300" height="400">
+    <img src="../recipe-images/lasagna.jpeg" alt="Lasagna Image" width="300" height="400">
     <h1>Lasagna</h1>
     <p>
         Lasagna is a layered Italian casserole made with sheets of pasta, rich meat sauce, creamy ricotta cheese mixture, and melted mozzarella and Parmesan. It's baked until bubbly and golden, offering a delicious combination of textures and flavors in every bite. Perfect for family gatherings or special occasions.
