--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,7 @@
     <title>Pizza</title>
 </head>
 <body>
-    <img src="/recipe-images/pizza.jpeg" alt="Image of a pizza" width="300" height="400">
+    <img src="../recipe-images/pizza.jpeg" alt="Image of a pizza" width="300" height="400">
     <h1>Pizza</h1>
     <p>
         Pizza is a versatile and popular dish featuring a baked dough base topped with tomato sauce, cheese, and a variety of toppings such as pepperoni, vegetables, and more. It’s known for its crispy crust and melty cheese, and can be customized to suit any taste preference.
