webpages are working properly

--- a/recipes/beef-stew.html
+++ b/recipes/beef-stew.html
@@ -6,7 +6,7 @@
     <title>Beef Stew Recipe</title>
 </head>
 <body>
-    <img src="../recipe-images/beef-stew.jpg" alt="A plate of Beef Stew" width="300" height="400">
+    <img src="../recipe-images/beef-stew.jpeg" alt="A plate of Beef Stew" width="300" height="400">
     <h1>Beef Stew</h1>
 
     <p>
